Add timeline exercices

--- a/src/index.html
+++ b/src/index.html
@@ -1,26 +1,5 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8" />
-    <title>imd3 - Exercices d'animations GSAP</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="scss/main.scss" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300..700&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
-      rel="stylesheet"
-    />
-  </head>
-  <body>
-    <header class="l-header">
-      <nav class="l-container">
-        <ul>
-          <li><a href="index.html">Animations GSAP</a></li>
-        </ul>
-      </nav>
-    </header>
-
+<extends src="partials/base-layout.html">
+  <block name="content">
     <div class="l-main">
       <main class="l-container">
         <h1 class="l-page-title">Exercices - Animations GSAP</h1>
@@ -135,8 +114,8 @@ tl.to(".element1", { x: 100, duration: 1 })
           <div class="l-content-wrapper">
             <h2 class="l-h2">Consigne</h2>
             <p>
-              Depuis <code>js/main.js</code>, écrivez le code JavaScript pour
-              créer des animations GSAP selon les indications de chaque
+              Depuis <code>js/animations.js</code>, écrivez le code JavaScript
+              pour créer des animations GSAP selon les indications de chaque
               exercice.
             </p>
             <p>
@@ -193,14 +172,10 @@ tl.to(".element1", { x: 100, duration: 1 })
       <div class="l-container">
         <p></p>
         <p>
-          📚
-          <a href="https://gsap.com/docs/v3/" target="_blank"
-            >Documentation GSAP</a
-          >
+          Prochain exercice ➡️
+          <a href="timeline.html">Timeline GSAP</a>
         </p>
       </div>
     </footer>
-
-    <script src="js/main.js" type="module"></script>
-  </body>
-</html>
+  </block>
+</extends>
