Add exercices on scrollTrigger

--- a/src/timeline.html
+++ b/src/timeline.html
@@ -111,7 +111,10 @@ tl.to("#js-timeline-1", { x: 100, duration: 1 })
           <a href="index.html">Animations GSAP</a>
           ⬅️ Exercice précédent
         </p>
-        <p></p>
+        <p>
+          Prochain exercice ➡️
+          <a href="scroll-trigger.html">ScrollTrigger GSAP</a>
+        </p>
       </div>
     </footer>
   </block>
